More client side

--- a/test/client/test.html
+++ b/test/client/test.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Testing clientside</title>
-    <link rel="stylesheet" type="text/css" href="../../node_modules/mocha/mocha.css">
-  </head>
-  <body>
-    <div id="mocha"></div>
-    <script src="../../node_modules/mocha/mocha.js"></script>
-    <script>
-      mocha.setup("bdd");
-    </script>
-    <script src="bundle.js"></script>
-    <script>
-      mocha.run();
-    </script>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title></title>
+  <link rel="stylesheet" href="../../node_modules/mocha/mocha.css">
+</head>
+<body>
+  <div id="mocha"></div>
+  <!--  mocha will find and append itself to this in the browser -->
+  <script src="../../node_modules/mocha/mocha.js"></script>
+  <script>
+    mocha.setup('bdd');
+  </script>
+
+  <script src="bundle.js"></script>
+  <script>
+    mocha.run();
+  </script>
+</body>
 </html>
