--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -10,6 +10,30 @@
   <ul id="catlist"></ul>
   <p>And here is a list of some of the types of cats that live here.</p>
   <ul id="typelist"></ul>
+  <script src="bundle.js"></script>
+</body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Client Side</title>
+</head>
+<body data-ng-app="catsApp">
+  <main data-ng-controller="catsController">
+    <h1>{{greeting}}</h1>
+    <input type="text" data-ng-model="greeting">
+    <button data-ng-click="displayGreeting()">Alert!</button>
+    <section data-ng-controller="oneMoreController">
+      <h2> Nested: {{greeting}}</h2>
+    </section>
+  </main>
+  <section data-ng-controller="anotherController">
+    <h2> Part two: {{greeting}} </h1>
+    <input type="text" data-ng-model="greeting">
+  </section>
   <script src="bundle.js"></script>
 </body>
 </html>
