--- a/app/index.html
+++ b/app/index.html
@@ -22,8 +22,8 @@
          <ul data-ng-repeat="cat in cats">
             <li>
                {{cat.name}}
-               <button data-ng-click="removeCat(cat)">Delete</button>
-               <button data-ng-if="!cat.editing" data-ng-click="catEdit(cat)">Edit</button>
+               <button data-ng-disabled="!cat._id" data-ng-click="removeCat(cat)">Delete</button>
+               <button data-ng-if="!cat.editing" data-ng-disabled="!cat._id" data-ng-click="catEdit(cat)">Edit</button>
                <form name="{{'editing' + cat._id}}" data-ng-if="cat.editing" data-ng-submit="saveEdit(cat)">
                   <input type="text" data-ng-model="cat.name">
                   <button type="submit">Save Changes</button>
